; ModuleID = '/home/carl/AnghaBench/borg/src/borg/algorithms/lz4/lib/extr_lz4.c_LZ4_decompress_safe_partial.c'
source_filename = "/home/carl/AnghaBench/borg/src/borg/algorithms/lz4/lib/extr_lz4.c_LZ4_decompress_safe_partial.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@endOnInputSize = common dso_local global i32 0, align 4
@partial_decode = common dso_local global i32 0, align 4
@noDict = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @LZ4_decompress_safe_partial(i8* %0, i8* %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %11 = load i32, i32* %9, align 4
  %12 = load i32, i32* %10, align 4
  %13 = call i32 @MIN(i32 %11, i32 %12)
  store i32 %13, i32* %10, align 4
  %14 = load i8*, i8** %6, align 8
  %15 = load i8*, i8** %7, align 8
  %16 = load i32, i32* %8, align 4
  %17 = load i32, i32* %10, align 4
  %18 = load i32, i32* @endOnInputSize, align 4
  %19 = load i32, i32* @partial_decode, align 4
  %20 = load i32, i32* @noDict, align 4
  %21 = load i8*, i8** %7, align 8
  %22 = bitcast i8* %21 to i32*
  %23 = call i32 @LZ4_decompress_generic(i8* %14, i8* %15, i32 %16, i32 %17, i32 %18, i32 %19, i32 %20, i32* %22, i32* null, i32 0)
  ret i32 %23
}

declare dso_local i32 @MIN(i32, i32) #1

declare dso_local i32 @LZ4_decompress_generic(i8*, i8*, i32, i32, i32, i32, i32, i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
